--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cap Go Server Demo</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@cap.js/widget"></script>
+    <!--<script src="widget.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/@cap.js/widget@0.1.21/cap.min.js"></script>
 </head>
 <body>
     <div class="container">
